# riscv-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  compile_asm.py
.github/workflows/: coverage.yml  rust.yml
benches/: benchmark.rs
programs/common/: Makefile  common.c  common.h  novectors.s
programs/drawing/: Makefile  main.c
programs/experiments/: main.c
programs/flightpath/: Makefile  main.c
programs/interrupts/: main.c
rsp/: test.py
rust-gdb-remote-protocol/: .gitignore  Cargo.toml
rust-gdb-remote-protocol/examples/: noop-server.rs
rust-gdb-remote-protocol/src/: lib.rs
src/: addressspace.rs  cpu.rs  error.rs  gdbserver.rs  instruction.rs  interrupt.rs  lib.rs  loader.rs  main.rs  ram.rs  util.rs
src/memory/: addressspace.rs  debug.rs  mod.rs  ram.rs  video.rs
tests/: common.rs  program_tests.rs
tests/programs/: Makefile  fibonacci.c  fibonacci.elf  parameters.c  parameters.elf
tests/programs/common/: common.c  common.h  link.x  startup.s
