[package]
name = "riscv-emu"
version = "0.1.0"
authors = ["Lukas Wagner <lwagner94@posteo.at>"]
edition = "2018"#
description = "riscv-emu is an emulator for the riscv32imac architecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdb-remote-protocol = { path = "rust-gdb-remote-protocol" }
clap = "2.33.0"
sdl2 = "0.32.2"

[profile.release]
#lto = true