[package]
name = "riscv-emu"
version = "0.1.0"
authors = ["Lukas Wagner <lwagner94@posteo.at>"]
edition = "2018"#
description = "riscv-emu is an emulator for the riscv32imac architecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
sdl2 = {version = "0.34.3", optional=true}
gdbstub = {version = "0.4.3", optional=true}

[profile.release]
#lto = true

[features]
default = ["framebuffer", "debugger"]
framebuffer = ["sdl2"]
debugger = ["gdbstub"]