[package]
name = "riscv-emu"
version = "0.1.0"
authors = ["Lukas Wagner <lwagner94@posteo.at>"]
edition = "2018"#
description = "riscv-emu is an emulator for the riscv32imac architecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "riscv_emu"
path = "src/lib.rs"

[[bin]]
name = "emulator"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
goblin = "0.3.1"
thiserror = "1.0.23"
sdl2 = {version = "0.34.3", optional=true}
gdbstub = {version = "0.4.3", optional=true}

[dev-dependencies]
criterion = "0.3.4"

[profile.release]
#lto = true

[features]
default = ["framebuffer", "debugger"]
framebuffer = ["sdl2"]
debugger = ["gdbstub"]

[[bench]]
name = "benchmark"
harness = false